# cmake-project-template

./: .gitignore  LICENSE  README.md  build.bash  setup.bash
src/: CMakeLists.txt
src/cmake/: embed_build_metadata.cmake
src/main/: CMakeLists.txt  main.cpp
src/version/: CMakeLists.txt  version.cpp.in
src/version/public/: version.h
